--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,11 +1,12 @@
 <div class="container">
+    <h3 class="p-3">Product</h3>
     <div class="row">
-        <div style="display:flex ;justify-content: end;">
+        <div style="display:flex ;justify-content: end;margin-bottom: 15px;">
             <button class="btn btn-primary btn-sm"
                 (click)="openSaveProductModal(productModel)"><i class="fa fa-plus"></i></button>
         </div>
         <div class="col-12">
-            <table class="table">
+            <table class="table table-bordered">
                 <thead class="thead-light">
                     <tr>
                         <th scope="col"></th>
