--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,17 +1,24 @@
-<form class="form-signin" #loginForm="ngForm" (ngSubmit)="login(loginForm.value)">
-    <div class="container-fluid">
-        <h2 class="form-signin-heading">Login</h2>
-        <div *ngIf="invalidLogin" class="alert alert-danger">Invalid username or password.</div>
-        <br />
-        <label for="username" class="sr-only">User Name</label>
-        <input type="email" id="username" name="username" ngModel class="form-control" placeholder="User Name" required
-            autofocus>
-        <br />
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" id="password" name="password" ngModel class="form-control" placeholder="Password"
-            required>
-        <br />
-        <button class="btn btn-lg btn-primary btn-sm" type="submit">Sign in</button>
-        <a href="/register">Or Register</a>
+<div style="display:flex;justify-content: center;align-items: center;height:60vh;">
+    <div class="col-sm-4">
+        <form class="form-signin" #loginForm="ngForm" (ngSubmit)="login(loginForm.value)">
+            <div class="container-fluid">
+                <h2 class="form-signin-heading">Login</h2>
+                <div *ngIf="invalidLogin" class="alert alert-danger">Invalid username or password.</div>
+                <br />
+                <label for="username" class="sr-only">User Name</label>
+                <input type="email" id="username" name="username" ngModel class="form-control" placeholder="User Name"
+                    required autofocus>
+                <br />
+                <label for="password" class="sr-only">Password</label>
+                <input type="password" id="password" name="password" ngModel class="form-control" placeholder="Password"
+                    required>
+                <br />
+                <button class="btn  btn-primary form-control" type="submit">Sign in</button>
+                <div style="margin-top: 15px;">
+                    <a href="/register">Or Register</a>
+
+                </div>
+            </div>
+        </form>
     </div>
-</form>
+</div>
